--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
   <main id="main">
 
       <!-- ======= About Section ======= -->
-      <section id="about" class="about">
+      <!--<section id="about" class="about">
         <div class="container">
 
           <div class="section-title">
@@ -117,7 +117,7 @@
           </div>
 
         </div>
-      </section><!-- End About Section -->
+      </section>--><!-- End About Section -->
 
 
 
