change image directory so image can load

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <header id="header" class="fixed-top">
     <div class="container d-flex align-items-center">
 
-    <a href="index.html" class="logo mr-auto"><img src="images\images\Artboard 1 kopie 8.png" alt="logo" class="img-fluid"></a>
+    <a href="index.html" class="logo mr-auto"><img src=".\images\Artboard 1 kopie 8.png" alt="logo" class="img-fluid"></a>
 
     <nav class="nav-menu d-none d-lg-block">
       <ul>
@@ -60,21 +60,21 @@
   <section id="symbols">
     <div class="card-deck">
   <div class="card" >
-    <img src="images\images\two-hearts2.png" class="card-img-top icons" alt="hearts">
+    <img src=".\images\two-hearts2.png" class="card-img-top icons" alt="hearts">
     <div class="card-body">
       <h5 class="card-title">82% MATCH RATE</h5>
       <p class="card-paragraph">Meer dan 82% van onze deelnemers heeft een match na de speeddating!</p>
     </div>
   </div>
   <div class="card">
-    <img src="images\images\champagne-with-heartb.png" class="card-img-top icons" alt="champagne">
+    <img src=".\images\champagne-with-heartb.png" class="card-img-top icons" alt="champagne">
     <div class="card-body">
       <h5 class="card-title">BUCKETLIST-MATERIAAL</h5>
       <p class="card-paragraph">Speeddaten is populair en hip. Get out of your comfortzone!</p>
     </div>
   </div>
   <div class="card">
-    <img src="images\images\veilig-daten.png" class="card-img-top icons" alt="lock">
+    <img src=".\images\veilig-daten.png" class="card-img-top icons" alt="lock">
     <div class="card-body">
       <h5 class="card-title">VEILIG EN ANONIEM</h5>
       <p class="card-paragraph">Dare to Date draagt veiligheid en anonimiteit hoog in het vaandel.</p>
