--- a/index.html
+++ b/index.html
@@ -10,11 +10,9 @@
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 <!-- Custom Css -->
 <link rel="stylesheet" href="assets\css\app.css">
-
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="https://allyoucan.cloud/cdn/icofont/1.0.1/icofont.css" integrity="sha384-jbCTJB16Q17718YM9U22iJkhuGbS0Gd2LjaWb4YJEZToOPmnKDjySVa323U+W7Fv" crossorigin="anonymous"></head>
 <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@523&display=swap" rel="stylesheet">
-
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta name="viewport" content="width=device-width, user-scalable=no">
 
@@ -29,23 +27,23 @@
     <nav class="nav-menu d-none d-lg-block">
       <ul>
         <li class="active">
-          <a href="index.html">Home</a>
+          <a href="index.html">HOME</a>
         </li>
-        <li class="nav-link drop-down" data-toggle="dropdown"><a href="">Info</a>
+        <li class="nav-link drop-down" data-toggle="dropdown"><a href="">INFO</a>
           <ul>
-            <li><a href="#">Waarom Speeddate?</a></li>
-            <li><a href="#">Over ons</a></li>
-            <li><a href="#">Veelgestelde vragen</a></li>
-            <li><a href="#">Careers</a></li>
-            <li><a href="#">Partner with us</a></li>
-            <li><a href="#">Blog</a></li>
+            <li><a href="#">WAAROM SPEEDDATE?</a></li>
+            <li><a href="#">OVER ONS</a></li>
+            <li><a href="#">VEELGESTELDE VRAGEN</a></li>
+            <li><a href="#">CAREERS</a></li>
+            <li><a href="#">PARTNER WITH US</a></li>
+            <li><a href="#">BLOG</a></li>
           </ul>
         </li>
-        <li><a href="Events.html">Evenementen</a></li>
-        <li><a href="Ervaring.html">Ervaringen</a></li>
-        <li><a href="Sfeerfoto.html">Sfeerfoto's</a></li>
-        <li><a href="contact.html">Contact</a></li>
-        <li><a href="blog.html">Blog</a></li>
+        <li><a href="Events.html">EVENEMENTEN</a></li>
+        <li><a href="Ervaring.html">ERVARINGEN</a></li>
+        <li><a href="Sfeerfoto.html">SFEERFOTO'S</a></li>
+        <li><a href="contact.html">CONTACT</a></li>
+        <li><a href="blog.html">BLOG</a></li>
         <li class="nav-link drop-down languages" data-toggle="dropdown"><a href="blog.html">NL</a>
             <ul>
               <li><a href="FR">FR</a></li>
@@ -101,18 +99,21 @@
   <div class="container">
     <h1 class="display-4">Onze evenementen</h1>
     <p class="lead">Bekijk hier het overzicht van onze geplande evenementen & filter eenvoudig op locatie of leeftijd!</p>
-    <img src="images/semicircular-up-arrow-60x80.png" class="rounded  Arrow" alt="Arrow">
+    <img src="images/semicircular-up-arrow-60x80.png" class="rounded float-left Arrow" alt="Arrow">
+    <div class="border">
+    </div>
   </div>
 </div>
-</section>
 
+</section>
+  <!-- ======= search Section ======= -->
 <section id="searchContainer">
 
 <div class="container search">
-  <div class="dropdown">
+  <div class="dropdown padding-drop">
     <a class="btn btn-secondary dropdown-toggle" role="button" id="dropdownMenuLink1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-      Dropdown link
-    </a>
+      Type Event
+ </a>
 
     <div class="dropdown-menu" aria-labelledby="dropdownMenuLink1">
       <a class="dropdown-item" href="#">Action</a>
@@ -121,7 +122,7 @@
     </div>
 
   <a class="btn btn-secondary dropdown-toggle" role="button" id="dropdownMenuLink2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-    Dropdown link
+    Stad
   </a>
 
   <div class="dropdown-menu" aria-labelledby="dropdownMenuLink2">
@@ -129,34 +130,201 @@
     <a class="dropdown-item" href="#">Another action</a>
     <a class="dropdown-item" href="#">Something else here</a>
   </div>
-  <a class="btn btn-secondary dropdown-toggle" role="button" id="dropdownMenuLink3" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-    Dropdown link
-  </a>
 
-  <div class="dropdown-menu" aria-labelledby="dropdownMenuLink3">
-    <a class="dropdown-item" href="#">Action</a>
-    <a class="dropdown-item" href="#">Another action</a>
-    <a class="dropdown-item" href="#">Something else here</a>
-  </div>
-  <a class="btn btn-secondary dropdown-toggle" role="button" id="dropdownMenuLink4" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-    Dropdown link
-  </a>
-
-  <div class="dropdown-menu" aria-labelledby="dropdownMenuLink4">
-    <a class="dropdown-item" href="#">Action</a>
-    <a class="dropdown-item" href="#">Another action</a>
-    <a class="dropdown-item" href="#">Something else here</a>
-  </div>
   <a class="btn btn-secondary dropdown-toggle" role="button" id="dropdownMenuLink5" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-    Dropdown link
+    leeftijd
   </a>
 
   <div class="dropdown-menu" aria-labelledby="dropdownMenuLink5">
-    <a class="dropdown-item" href="#">Action</a>
-    <a class="dropdown-item" href="#">Another action</a>
-    <a class="dropdown-item" href="#">Something else here</a>
+    <a class="dropdown-item" href="#">18-24</a>
+    <a class="dropdown-item" href="#">22-30</a>
+    <a class="dropdown-item" href="#">25-35</a>
+    <a class="dropdown-item" href="#">28-38</a>
+    <a class="dropdown-item" href="#">40-55</a>
+    <a class="dropdown-item" href="#">52-65</a>
+
+
+  </div>
+<button id="repeat" type="button" class="btn btn-outline-dark"><i class="fa fa-repeat"></i> </button>
+
+</div>
+</div>
+<div id="results" class="cards-search">
+  <div class="container center-results">
+<div class="card" >
+  <span class="bg">
+				<div class="date">
+				thu
+				</div>
+				<span  >
+			</span>
+					<div class="date2">
+				11
+				</div>
+				<span >
+			</span>
+				<div class="date3">
+				jun
+				</div>
+			</span>
+  <img src="https://media.istockphoto.com/photos/sweet-couple-having-a-romantic-dinner-picture-id860821478?k=6&m=860821478&s=612x612&w=0&h=Z2FEfxbHNnahwJby14JUIuWcygLlZ2dpdRuELDOkOuw=" class="card-img-top" alt="...">
+  <div class="card-body">
+    <h5 class="card-title">Dating kind</h5>
+    <p class="kind"> online speeddater (Antwerp)</p>
+    <p class="age">age group: <strong>24-25</strong></p>
+    <div>
+      <p><i class="fa fa-venus" aria-hidden="true"></i>
+ available
+      <i class="fa fa-mars"></i> available</p>
+    </div>
+    <a href="#" class="btn btn-primary">BOOK</a>
   </div>
 </div>
+<div class="card" >
+  <span class="bg">
+				<div class="date">
+				thu
+				</div>
+				<span  >
+			</span>
+					<div class="date2">
+				11
+				</div>
+				<span >
+			</span>
+				<div class="date3">
+				jun
+				</div>
+			</span>
+  <img src="https://media.istockphoto.com/photos/sweet-couple-having-a-romantic-dinner-picture-id860821478?k=6&m=860821478&s=612x612&w=0&h=Z2FEfxbHNnahwJby14JUIuWcygLlZ2dpdRuELDOkOuw=" class="card-img-top" alt="...">
+  <div class="card-body">
+    <h5 class="card-title">Dating kind</h5>
+    <p class="kind"> online speeddater (Antwerp)</p>
+    <p class="age">age group: <strong>24-25</strong></p>
+    <div>
+      <p><i class="fa fa-venus" aria-hidden="true"></i>
+ available
+      <i class="fa fa-mars"></i> available</p>
+    </div>
+    <a href="#" class="btn btn-primary">BOOK</a>
+  </div>
+</div>
+<div class="card" >
+  <span class="bg">
+				<div class="date">
+				thu
+				</div>
+				<span  >
+			</span>
+					<div class="date2">
+				11
+				</div>
+				<span >
+			</span>
+				<div class="date3">
+				jun
+				</div>
+			</span>
+  <img src="https://media.istockphoto.com/photos/sweet-couple-having-a-romantic-dinner-picture-id860821478?k=6&m=860821478&s=612x612&w=0&h=Z2FEfxbHNnahwJby14JUIuWcygLlZ2dpdRuELDOkOuw=" class="card-img-top" alt="...">
+  <div class="card-body">
+    <h5 class="card-title">Dating kind</h5>
+    <p class="kind"> online speeddater (Antwerp)</p>
+    <p class="age">age group: <strong>24-25</strong></p>
+    <div>
+      <p><i class="fa fa-venus" aria-hidden="true"></i>
+ available
+      <i class="fa fa-mars"></i> available</p>
+    </div>
+    <a href="#" class="btn btn-primary">BOOK</a>
+  </div>
+</div>
+<div class="card" >
+  <span class="bg">
+				<div class="date">
+				thu
+				</div>
+				<span  >
+			</span>
+					<div class="date2">
+				11
+				</div>
+				<span >
+			</span>
+				<div class="date3">
+				jun
+				</div>
+			</span>
+  <img src="https://media.istockphoto.com/photos/sweet-couple-having-a-romantic-dinner-picture-id860821478?k=6&m=860821478&s=612x612&w=0&h=Z2FEfxbHNnahwJby14JUIuWcygLlZ2dpdRuELDOkOuw=" class="card-img-top" alt="...">
+  <div class="card-body">
+    <h5 class="card-title">Dating kind</h5>
+    <p class="kind"> online speeddater (Antwerp)</p>
+    <p class="age">age group: <strong>24-25</strong></p>
+    <div>
+      <p><i class="fa fa-venus" aria-hidden="true"></i>
+ available
+      <i class="fa fa-mars"></i> available</p>
+    </div>
+    <a href="#" class="btn btn-primary">BOOK</a>
+  </div>
+</div>
+  <div class="card" >
+    <span class="bg">
+				<div class="date">
+				thu
+				</div>
+				<span  >
+			</span>
+					<div class="date2">
+				11
+				</div>
+				<span >
+			</span>
+				<div class="date3">
+				jun
+				</div>
+			</span>
+  <img src="https://media.istockphoto.com/photos/sweet-couple-having-a-romantic-dinner-picture-id860821478?k=6&m=860821478&s=612x612&w=0&h=Z2FEfxbHNnahwJby14JUIuWcygLlZ2dpdRuELDOkOuw=" class="card-img-top" alt="...">
+  <div class="card-body">
+    <h5 class="card-title">Dating kind</h5>
+    <p class="kind"> online speeddater (Antwerp)</p>
+    <p class="age">age group: <strong>24-25</strong></p>
+    <div>
+      <p><i class="fa fa-venus"></i> available
+      <i class="fa fa-mars"></i> available</p>
+    </div>
+    <a href="#" class="btn btn-primary">BOOK</a>
+  </div>
+</div>
+<div class="card" >
+  <span class="bg">
+				<div class="date">
+				thu
+				</div>
+				<span  >
+			</span>
+					<div class="date2">
+				11
+				</div>
+				<span >
+			</span>
+				<div class="date3">
+				jun
+				</div>
+			</span>
+  <img src="https://media.istockphoto.com/photos/sweet-couple-having-a-romantic-dinner-picture-id860821478?k=6&m=860821478&s=612x612&w=0&h=Z2FEfxbHNnahwJby14JUIuWcygLlZ2dpdRuELDOkOuw=" class="card-img-top" alt="...">
+  <div class="card-body">
+    <h5 class="card-title">Dating kind</h5>
+    <p class="kind"> online speeddater (Antwerp)</p>
+    <p class="age">age group: <strong>24-25</strong></p>
+    <div>
+      <p><i class="fa fa-venus"></i> available
+      <i class="fa fa-mars"></i> available</p>
+    </div>
+    <a href="#" class="btn btn-primary">BOOK</a>
+  </div>
+</div>
+</div>
+
 </div>
 </section>
 
