--- a/index.html
+++ b/index.html
@@ -149,6 +149,9 @@
 
 </div>
 </div>
+<!-- End search Section -->
+
+<!-- begin results Section -->
 <div id="results" class="cards-search">
   <div class="container center-results">
 <div class="card" >
@@ -326,6 +329,107 @@
 </div>
 
 </div>
+<div class="center more-results">
+  <h2>Meer evenementen</h2>
+</div>
+</section>
+<!-- End results Section -->
+
+<!-- begin as seen on Section -->
+<section id="as-seen-on" >
+  <h2 class="center"> As Seen On</h2>
+  <div class="container">
+            <div class="row blog">
+                <div class="col-md-12">
+                    <div id="blogCarousel" class="carousel slide" data-ride="carousel">
+
+                        <ol class="carousel-indicators">
+                            <li data-target="#blogCarousel" data-slide-to="0" class="active"></li>
+                            <li data-target="#blogCarousel" data-slide-to="1"></li>
+                        </ol>
+
+                        <!-- Carousel items -->
+                        <div class="carousel-inner">
+
+                            <div class="carousel-item active">
+                                <div class="row">
+                                    <div class="col-md-2 col-3">
+                                        <a href="#">
+                                            <img class=" as-seen-img" src="images\new_vtm.png" alt="Image" style="max-width:100%;">
+                                        </a>
+                                    </div>
+                                    <div class="col-md-2 col-3">
+                                        <a href="#">
+                                            <img class=" as-seen-img" src="images\nnnnn_02.png" alt="Image" style="max-width:100%;">
+                                        </a>
+                                    </div>
+                                    <div class="col-md-2 col-3">
+                                        <a href="#">
+                                            <img class="as-seen-img" src="images\nnnnn_04.png" alt="Image" style="max-width:100%;">
+                                        </a>
+                                    </div>
+                                    <div class="col-md-2 col-3">
+                                        <a href="#">
+                                            <img class=" as-seen-img" src="images\nnnnn_06.png" alt="Image" style="max-width:100%;">
+                                        </a>
+                                    </div>
+                                    <div class="col-md-2 flair">
+                                        <a href="#">
+                                            <img class=" as-seen-img" src="images\nnnnn_08.png" alt="Image" style="max-width:100%;">
+                                        </a>
+                                    </div>
+                                    <div class="col-md-2 humo">
+                                        <a href="#">
+                                            <img class=" as-seen-img" src="images\nnnnn_10.png" alt="Image" style="max-width:100%;">
+                                        </a>
+                                    </div>
+                                </div>
+                                <!--.row-->
+                            </div>
+                            <!--.item-->
+
+                            <div class="carousel-item">
+                                <div class="row">
+                                  <div class="col-md-2 col-3 flairm">
+                                      <a href="#">
+                                          <img class=" as-seen-img" src="images\nnnnn_08.png" alt="Image" style="max-width:100%;">
+                                      </a>
+                                  </div>
+                                  <div class="col-md-2 col-3 humom">
+                                      <a href="#">
+                                          <img class=" as-seen-img" src="images\nnnnn_10.png" alt="Image" style="max-width:100%;">
+                                      </a>
+                                  </div>
+                                    <div class="col-md-2 col-3">
+                                        <a href="#">
+                                            <img class=" as-seen-img" src="images\nnnnn_12.png" alt="Image" style="max-width:100%;">
+                                        </a>
+                                    </div>
+                                    <div class="col-md-2 col-3">
+                                        <a href="#">
+                                            <img class=" as-seen-img" src="images\VRT-logo-1.png" alt="Image" style="max-width:100%;">
+                                        </a>
+                                    </div>
+                                </div>
+                                <!--.row-->
+                            </div>
+                            <!--.item-->
+                        </div>
+                        <!--.carousel-inner-->
+                    </div>
+                    <!--.Carousel-->
+                </div>
+            </div>
+</div>
+</section>
+<!-- End as seen on Section -->
+
+<!-- begin testimonials Section -->
+<section>
+  <div class="center container">
+    <h2>THAT'S ALL PRETTY GOOD, BUT WHAT DO THE PEOPLE SAY?</h2>
+    <div class="line"></div>
+  </div>
 </section>
 
 
