--- a/index.html
+++ b/index.html
@@ -425,11 +425,62 @@
 <!-- End as seen on Section -->
 
 <!-- begin testimonials Section -->
-<section>
+<section id="testimonials">
   <div class="center container">
     <h2>THAT'S ALL PRETTY GOOD, BUT WHAT DO THE PEOPLE SAY?</h2>
+    <img src="images/semicircular-up-arrow-60x80.png" class="rounded float-right Arrow" alt="Arrow">
     <div class="line"></div>
   </div>
+
+<div class="testimonials-response">
+<div class="wrapper">
+
+
+	<div class="profile">
+		<img src="https://images.unsplash.com/photo-1484186139897-d5fc6b908812?ixlib=rb-0.3.5&s=9358d797b2e1370884aa51b0ab94f706&auto=format&fit=crop&w=200&q=80%20500w" class="thumbnail">
+
+		<h3 class="name">Beverly Little 24</h3>
+		<p class="title">Type event</p>
+		<p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque aliquam aliquid porro!</p>
+		<p class="quote">,,</p>
+
+	</div>
+
+
+</div>
+
+<div class="wrapper">
+
+
+	<div class="profile">
+		<img src="https://images.unsplash.com/photo-1484186139897-d5fc6b908812?ixlib=rb-0.3.5&s=9358d797b2e1370884aa51b0ab94f706&auto=format&fit=crop&w=200&q=80%20500w" class="thumbnail">
+
+		<h3 class="name">Beverly Little 24</h3>
+		<p class="title">Type event</p>
+		<p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque aliquam aliquid porro!</p>
+		<p class="quote">,,</p>
+
+	</div>
+
+
+</div>
+<div class="wrapper">
+
+
+	<div class="profile">
+		<img src="https://images.unsplash.com/photo-1484186139897-d5fc6b908812?ixlib=rb-0.3.5&s=9358d797b2e1370884aa51b0ab94f706&auto=format&fit=crop&w=200&q=80%20500w" class="thumbnail">
+
+		<h3 class="name">Beverly Little 24</h3>
+		<p class="title">Type event</p>
+		<p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque aliquam aliquid porro!</p>
+		<p class="quote">,,</p>
+
+	</div>
+
+
+</div>
+</div>
+
 </section>
 
 
