--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <a href="index.html" class="logo mr-auto"><img src=".\images\Artboard 1 kopie 8.png" alt="logo" class="img-fluid"></a>
 
-    <nav class="nav-menu d-none d-lg-block">
+    <nav class="nav-menu d-mobile d-lg-block ">
       <ul>
         <li class="active">
           <a href="index.html">HOME</a>
@@ -433,7 +433,7 @@
   </div>
 
 <div class="testimonials-response">
-<div class="wrapper">
+<div class="wrapper col-lg-3 col-md-6 col-12">
 
 
 	<div class="profile">
@@ -449,7 +449,7 @@
 
 </div>
 
-<div class="wrapper">
+<div class="wrapper col-lg-3 col-md-6 col-12">
 
 
 	<div class="profile">
@@ -464,7 +464,9 @@
 
 
 </div>
-<div class="wrapper">
+<div class="row">
+
+<div class="wrapper col-lg-3 col-md-6 col-12">
 
 
 	<div class="profile">
@@ -479,6 +481,8 @@
 
 
 </div>
+</div>
+
 </div>
 
 </section>
