--- a/index.html
+++ b/index.html
@@ -389,6 +389,16 @@
                             <!--.item-->
 
                             <div class="carousel-item">
+                              <div class="col-md-2 col-3">
+                                  <a href="#">
+                                      <img class=" as-seen-img" src="images\nnnnn_12.png" alt="Image" style="max-width:100%;">
+                                  </a>
+                              </div>
+                              <div class="col-md-2 col-3">
+                                  <a href="#">
+                                      <img class=" as-seen-img" src="images\VRT-logo-1.png" alt="Image" style="max-width:100%;">
+                                  </a>
+                              </div>
                                 <div class="row">
                                   <div class="col-md-2 col-3 flairm">
                                       <a href="#">
@@ -400,16 +410,7 @@
                                           <img class=" as-seen-img" src="images\nnnnn_10.png" alt="Image" style="max-width:100%;">
                                       </a>
                                   </div>
-                                    <div class="col-md-2 col-3">
-                                        <a href="#">
-                                            <img class=" as-seen-img" src="images\nnnnn_12.png" alt="Image" style="max-width:100%;">
-                                        </a>
-                                    </div>
-                                    <div class="col-md-2 col-3">
-                                        <a href="#">
-                                            <img class=" as-seen-img" src="images\VRT-logo-1.png" alt="Image" style="max-width:100%;">
-                                        </a>
-                                    </div>
+
                                 </div>
                                 <!--.row-->
                             </div>
@@ -431,57 +432,254 @@
     <img src="images/semicircular-up-arrow-60x80.png" class="rounded float-right Arrow" alt="Arrow">
     <div class="line"></div>
   </div>
-
-<div class="testimonials-response">
-<div class="wrapper col-lg-3 col-md-6 col-12">
-
-
-	<div class="profile">
-		<img src="https://images.unsplash.com/photo-1484186139897-d5fc6b908812?ixlib=rb-0.3.5&s=9358d797b2e1370884aa51b0ab94f706&auto=format&fit=crop&w=200&q=80%20500w" class="thumbnail">
-
-		<h3 class="name">Beverly Little 24</h3>
-		<p class="title">Type event</p>
-		<p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque aliquam aliquid porro!</p>
-		<p class="quote">,,</p>
-
-	</div>
+  <div id="carouselExampleIndicators" class=" container carousel slide" data-ride="carousel">
+  <ol class="carousel-indicators">
+    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+  </ol>
+  <div class="carousel-inner height-testimonials">
+    <div class="carousel-item active">
+      <div class="wrapper col-lg-3 col-md-6 col-12">
 
 
+      	<div class="profile ">
+      		<img src="https://images.unsplash.com/photo-1484186139897-d5fc6b908812?ixlib=rb-0.3.5&s=9358d797b2e1370884aa51b0ab94f706&auto=format&fit=crop&w=200&q=80%20500w" class="thumbnail">
+
+      		<h3 class="name">Beverly Little 24</h3>
+      		<p class="title">Type event</p>
+      		<p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque aliquam aliquid porro!</p>
+      		<p class="quote">,,</p>
+
+      	</div>
+
+
+      </div>
+      <div class="wrapper col-lg-3 col-md-6 col-12">
+
+
+      	<div class="profile ">
+      		<img src="https://images.unsplash.com/photo-1484186139897-d5fc6b908812?ixlib=rb-0.3.5&s=9358d797b2e1370884aa51b0ab94f706&auto=format&fit=crop&w=200&q=80%20500w" class="thumbnail">
+
+      		<h3 class="name">Beverly Little 24</h3>
+      		<p class="title">Type event</p>
+      		<p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque aliquam aliquid porro!</p>
+      		<p class="quote">,,</p>
+
+      	</div>
+
+
+      </div>
+      <div class="wrapper col-lg-3 col-md-6 col-12">
+
+
+      	<div class="profile ">
+      		<img src="https://images.unsplash.com/photo-1484186139897-d5fc6b908812?ixlib=rb-0.3.5&s=9358d797b2e1370884aa51b0ab94f706&auto=format&fit=crop&w=200&q=80%20500w" class="thumbnail">
+
+      		<h3 class="name">Beverly Little 24</h3>
+      		<p class="title">Type event</p>
+      		<p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque aliquam aliquid porro!</p>
+      		<p class="quote">,,</p>
+
+      	</div>
+
+
+      </div>
+      <div class="wrapper col-lg-3 col-md-6 col-12">
+
+
+      	<div class="profile ">
+      		<img src="https://images.unsplash.com/photo-1484186139897-d5fc6b908812?ixlib=rb-0.3.5&s=9358d797b2e1370884aa51b0ab94f706&auto=format&fit=crop&w=200&q=80%20500w" class="thumbnail">
+
+      		<h3 class="name">Beverly Little 24</h3>
+      		<p class="title">Type event</p>
+      		<p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque aliquam aliquid porro!</p>
+      		<p class="quote">,,</p>
+
+      	</div>
+
+
+      </div>
+
+    </div>
+    <div class="carousel-item">
+      <div class="wrapper col-lg-3 col-md-6 col-12">
+
+
+      	<div class="profile ">
+      		<img src="https://images.unsplash.com/photo-1484186139897-d5fc6b908812?ixlib=rb-0.3.5&s=9358d797b2e1370884aa51b0ab94f706&auto=format&fit=crop&w=200&q=80%20500w" class="thumbnail">
+
+      		<h3 class="name">Beverly Little 24</h3>
+      		<p class="title">Type event</p>
+      		<p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque aliquam aliquid porro!</p>
+      		<p class="quote">,,</p>
+
+      	</div>
+
+
+      </div><div class="wrapper col-lg-3 col-md-6 col-12">
+
+
+      	<div class="profile ">
+      		<img src="https://images.unsplash.com/photo-1484186139897-d5fc6b908812?ixlib=rb-0.3.5&s=9358d797b2e1370884aa51b0ab94f706&auto=format&fit=crop&w=200&q=80%20500w" class="thumbnail">
+
+      		<h3 class="name">Beverly Little 24</h3>
+      		<p class="title">Type event</p>
+      		<p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque aliquam aliquid porro!</p>
+      		<p class="quote">,,</p>
+
+      	</div>
+
+
+      </div><div class="wrapper col-lg-3 col-md-6 col-12">
+
+
+      	<div class="profile ">
+      		<img src="https://images.unsplash.com/photo-1484186139897-d5fc6b908812?ixlib=rb-0.3.5&s=9358d797b2e1370884aa51b0ab94f706&auto=format&fit=crop&w=200&q=80%20500w" class="thumbnail">
+
+      		<h3 class="name">Beverly Little 24</h3>
+      		<p class="title">Type event</p>
+      		<p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque aliquam aliquid porro!</p>
+      		<p class="quote">,,</p>
+
+      	</div>
+
+
+      </div>
+      <div class="wrapper col-lg-3 col-md-6 col-12">
+
+
+      	<div class="profile ">
+      		<img src="https://images.unsplash.com/photo-1484186139897-d5fc6b908812?ixlib=rb-0.3.5&s=9358d797b2e1370884aa51b0ab94f706&auto=format&fit=crop&w=200&q=80%20500w" class="thumbnail">
+
+      		<h3 class="name">Beverly Little 24</h3>
+      		<p class="title">Type event</p>
+      		<p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque aliquam aliquid porro!</p>
+      		<p class="quote">,,</p>
+
+      	</div>
+
+
+      </div>
+    </div>
+    <div class="carousel-item">
+      <div class="wrapper col-lg-3 col-md-6 col-12">
+
+
+      	<div class="profile ">
+      		<img src="https://images.unsplash.com/photo-1484186139897-d5fc6b908812?ixlib=rb-0.3.5&s=9358d797b2e1370884aa51b0ab94f706&auto=format&fit=crop&w=200&q=80%20500w" class="thumbnail">
+
+      		<h3 class="name">Beverly Little 24</h3>
+      		<p class="title">Type event</p>
+      		<p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque aliquam aliquid porro!</p>
+      		<p class="quote">,,</p>
+
+      	</div>
+
+
+      </div>
+      <div class="wrapper col-lg-3 col-md-6 col-12">
+
+
+      	<div class="profile ">
+      		<img src="https://images.unsplash.com/photo-1484186139897-d5fc6b908812?ixlib=rb-0.3.5&s=9358d797b2e1370884aa51b0ab94f706&auto=format&fit=crop&w=200&q=80%20500w" class="thumbnail">
+
+      		<h3 class="name">Beverly Little 24</h3>
+      		<p class="title">Type event</p>
+      		<p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque aliquam aliquid porro!</p>
+      		<p class="quote">,,</p>
+
+      	</div>
+
+
+      </div>
+      <div class="wrapper col-lg-3 col-md-6 col-12">
+
+
+      	<div class="profile ">
+      		<img src="https://images.unsplash.com/photo-1484186139897-d5fc6b908812?ixlib=rb-0.3.5&s=9358d797b2e1370884aa51b0ab94f706&auto=format&fit=crop&w=200&q=80%20500w" class="thumbnail">
+
+      		<h3 class="name">Beverly Little 24</h3>
+      		<p class="title">Type event</p>
+      		<p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque aliquam aliquid porro!</p>
+      		<p class="quote">,,</p>
+
+      	</div>
+
+
+      </div>
+      <div class="wrapper col-lg-3 col-md-6 col-12">
+
+
+      	<div class="profile ">
+      		<img src="https://images.unsplash.com/photo-1484186139897-d5fc6b908812?ixlib=rb-0.3.5&s=9358d797b2e1370884aa51b0ab94f706&auto=format&fit=crop&w=200&q=80%20500w" class="thumbnail">
+
+      		<h3 class="name">Beverly Little 24</h3>
+      		<p class="title">Type event</p>
+      		<p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque aliquam aliquid porro!</p>
+      		<p class="quote">,,</p>
+
+      	</div>
+
+
+      </div>
+    </div>
+  </div>
+  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
+  <div >
+
+<div class="container">
+
+<div id="wrapper " class="row padding-gift">
+  <div id="subscribe" class="col-12 col-md-6">
+
+    <div class="information-column">
+    </div>
+
+    <div class="form-column">
+                <h2>Schrijf je in voor ons Newsletter</h2>
+
+        <p>Word op de hoogte gehouden door ons team</p>
+     <form class="form">
+        <input type="name" placeholder="Volledige naam">
+
+        <input type="email" placeholder="Email adres">
+        <input type="email" placeholder="Email adres">
+
+        <p>ingegeven gegevens worden beveiligd door de europese grdp regelgeving</p>
+
+       <div class="free-button subscribe-btn">Subscribe</div>
+      </form>
+
+    </div>
+  </div>
+
+  <div class=" col-12 col-md-6 gift" >
+  <div class="row no-gutters background-gift">
+    <div class="col-12 col-md-4 card-img">
+    </div>
+    <div class="col-md-8">
+      <div class="card-body">
+        <h5 class="card-title gift-title">Cadeaubon!</h5>
+        <p class="card-text">Nog op zoek naar een creatief en vooral leuk cadeau dat je aan je favoriete single vrienden kan geven?</p>
+        <p class="card-text">Dare to Date cadeaubonnen!</p>
+        <p class="card-text">Verras jou beste single</p>
+        <div class="free-button subscribe-btn">meer informatie</div>
+      </div>
+    </div>
+  </div>
+</div>
+</div>
 </div>
 
-<div class="wrapper col-lg-3 col-md-6 col-12">
-
-
-	<div class="profile">
-		<img src="https://images.unsplash.com/photo-1484186139897-d5fc6b908812?ixlib=rb-0.3.5&s=9358d797b2e1370884aa51b0ab94f706&auto=format&fit=crop&w=200&q=80%20500w" class="thumbnail">
-
-		<h3 class="name">Beverly Little 24</h3>
-		<p class="title">Type event</p>
-		<p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque aliquam aliquid porro!</p>
-		<p class="quote">,,</p>
-
-	</div>
-
-
-</div>
-<div class="row">
-
-<div class="wrapper col-lg-3 col-md-6 col-12">
-
-
-	<div class="profile">
-		<img src="https://images.unsplash.com/photo-1484186139897-d5fc6b908812?ixlib=rb-0.3.5&s=9358d797b2e1370884aa51b0ab94f706&auto=format&fit=crop&w=200&q=80%20500w" class="thumbnail">
-
-		<h3 class="name">Beverly Little 24</h3>
-		<p class="title">Type event</p>
-		<p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque aliquam aliquid porro!</p>
-		<p class="quote">,,</p>
-
-	</div>
-
-
-</div>
-</div>
 
 </div>
 
