--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 <link rel="stylesheet" href="https://allyoucan.cloud/cdn/icofont/1.0.1/icofont.css" integrity="sha384-jbCTJB16Q17718YM9U22iJkhuGbS0Gd2LjaWb4YJEZToOPmnKDjySVa323U+W7Fv" crossorigin="anonymous"></head>
 <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@523&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0-2/css/all.min.css">
+
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta name="viewport" content="width=device-width, user-scalable=no">
 
@@ -97,11 +99,9 @@
   <section>
   <div class="jumbotron jumbotron-fluid">
   <div class="container">
-    <h1 class="display-4">Onze evenementen</h1>
+    <h1 class="display-4 event-title">Onze evenementen</h1>
     <p class="lead">Bekijk hier het overzicht van onze geplande evenementen & filter eenvoudig op locatie of leeftijd!</p>
-    <img src="images/semicircular-up-arrow-60x80.png" class="rounded float-left Arrow" alt="Arrow">
-    <div class="border">
-    </div>
+    <img src="images/semicircular-up-arrow-60x80.png" class="rounded float-right Arrow" alt="Arrow">
   </div>
 </div>
 
@@ -154,183 +154,181 @@
 <!-- begin results Section -->
 <div id="results" class="cards-search">
   <div class="container center-results">
-<div class="card" >
-  <span class="bg">
-				<div class="date">
-				thu
-				</div>
-				<span  >
-			</span>
-					<div class="date2">
-				11
-				</div>
-				<span >
-			</span>
-				<div class="date3">
-				jun
-				</div>
-			</span>
-  <img src="https://media.istockphoto.com/photos/sweet-couple-having-a-romantic-dinner-picture-id860821478?k=6&m=860821478&s=612x612&w=0&h=Z2FEfxbHNnahwJby14JUIuWcygLlZ2dpdRuELDOkOuw=" class="card-img-top" alt="...">
-  <div class="card-body">
-    <h5 class="card-title">Dating kind</h5>
-    <p class="kind"> online speeddater (Antwerp)</p>
-    <p class="age">age group: <strong>24-25</strong></p>
-    <div>
-      <p><i class="fa fa-venus" aria-hidden="true"></i>
- available
-      <i class="fa fa-mars"></i> available</p>
-    </div>
-    <a href="#" class="btn btn-primary">BOOK</a>
-  </div>
-</div>
-<div class="card" >
-  <span class="bg">
-				<div class="date">
-				thu
-				</div>
-				<span  >
-			</span>
-					<div class="date2">
-				11
-				</div>
-				<span >
-			</span>
-				<div class="date3">
-				jun
-				</div>
-			</span>
-  <img src="https://media.istockphoto.com/photos/sweet-couple-having-a-romantic-dinner-picture-id860821478?k=6&m=860821478&s=612x612&w=0&h=Z2FEfxbHNnahwJby14JUIuWcygLlZ2dpdRuELDOkOuw=" class="card-img-top" alt="...">
-  <div class="card-body">
-    <h5 class="card-title">Dating kind</h5>
-    <p class="kind"> online speeddater (Antwerp)</p>
-    <p class="age">age group: <strong>24-25</strong></p>
-    <div>
-      <p><i class="fa fa-venus" aria-hidden="true"></i>
- available
-      <i class="fa fa-mars"></i> available</p>
-    </div>
-    <a href="#" class="btn btn-primary">BOOK</a>
-  </div>
-</div>
-<div class="card" >
-  <span class="bg">
-				<div class="date">
-				thu
-				</div>
-				<span  >
-			</span>
-					<div class="date2">
-				11
-				</div>
-				<span >
-			</span>
-				<div class="date3">
-				jun
-				</div>
-			</span>
-  <img src="https://media.istockphoto.com/photos/sweet-couple-having-a-romantic-dinner-picture-id860821478?k=6&m=860821478&s=612x612&w=0&h=Z2FEfxbHNnahwJby14JUIuWcygLlZ2dpdRuELDOkOuw=" class="card-img-top" alt="...">
-  <div class="card-body">
-    <h5 class="card-title">Dating kind</h5>
-    <p class="kind"> online speeddater (Antwerp)</p>
-    <p class="age">age group: <strong>24-25</strong></p>
-    <div>
-      <p><i class="fa fa-venus" aria-hidden="true"></i>
- available
-      <i class="fa fa-mars"></i> available</p>
-    </div>
-    <a href="#" class="btn btn-primary">BOOK</a>
-  </div>
-</div>
-<div class="card" >
-  <span class="bg">
-				<div class="date">
-				thu
-				</div>
-				<span  >
-			</span>
-					<div class="date2">
-				11
-				</div>
-				<span >
-			</span>
-				<div class="date3">
-				jun
-				</div>
-			</span>
-  <img src="https://media.istockphoto.com/photos/sweet-couple-having-a-romantic-dinner-picture-id860821478?k=6&m=860821478&s=612x612&w=0&h=Z2FEfxbHNnahwJby14JUIuWcygLlZ2dpdRuELDOkOuw=" class="card-img-top" alt="...">
-  <div class="card-body">
-    <h5 class="card-title">Dating kind</h5>
-    <p class="kind"> online speeddater (Antwerp)</p>
-    <p class="age">age group: <strong>24-25</strong></p>
-    <div>
-      <p><i class="fa fa-venus" aria-hidden="true"></i>
- available
-      <i class="fa fa-mars"></i> available</p>
-    </div>
-    <a href="#" class="btn btn-primary">BOOK</a>
-  </div>
-</div>
-  <div class="card" >
-    <span class="bg">
-				<div class="date">
-				thu
-				</div>
-				<span  >
-			</span>
-					<div class="date2">
-				11
-				</div>
-				<span >
-			</span>
-				<div class="date3">
-				jun
-				</div>
-			</span>
-  <img src="https://media.istockphoto.com/photos/sweet-couple-having-a-romantic-dinner-picture-id860821478?k=6&m=860821478&s=612x612&w=0&h=Z2FEfxbHNnahwJby14JUIuWcygLlZ2dpdRuELDOkOuw=" class="card-img-top" alt="...">
-  <div class="card-body">
-    <h5 class="card-title">Dating kind</h5>
-    <p class="kind"> online speeddater (Antwerp)</p>
-    <p class="age">age group: <strong>24-25</strong></p>
-    <div>
-      <p><i class="fa fa-venus"></i> available
-      <i class="fa fa-mars"></i> available</p>
-    </div>
-    <a href="#" class="btn btn-primary">BOOK</a>
-  </div>
-</div>
-<div class="card" >
-  <span class="bg">
-				<div class="date">
-				thu
-				</div>
-				<span  >
-			</span>
-					<div class="date2">
-				11
-				</div>
-				<span >
-			</span>
-				<div class="date3">
-				jun
-				</div>
-			</span>
-  <img src="https://media.istockphoto.com/photos/sweet-couple-having-a-romantic-dinner-picture-id860821478?k=6&m=860821478&s=612x612&w=0&h=Z2FEfxbHNnahwJby14JUIuWcygLlZ2dpdRuELDOkOuw=" class="card-img-top" alt="...">
-  <div class="card-body">
-    <h5 class="card-title">Dating kind</h5>
-    <p class="kind"> online speeddater (Antwerp)</p>
-    <p class="age">age group: <strong>24-25</strong></p>
-    <div>
-      <p><i class="fa fa-venus"></i> available
-      <i class="fa fa-mars"></i> available</p>
-    </div>
-    <a href="#" class="btn btn-primary">BOOK</a>
-  </div>
-</div>
-</div>
 
+<div class="card">
+  <span class="bg">
+				<div class="date">
+				thu
+				</div>
+				<span  >
+			</span>
+					<div class="date2">
+				11
+				</div>
+				<span >
+			</span>
+				<div class="date3">
+				jun
+				</div>
+			</span>
+  <img src="https://media.istockphoto.com/photos/sweet-couple-having-a-romantic-dinner-picture-id860821478?k=6&m=860821478&s=612x612&w=0&h=Z2FEfxbHNnahwJby14JUIuWcygLlZ2dpdRuELDOkOuw=" class="card-img-top" alt="...">
+  <div class="card-body results-body">
+    <h5 class="card-title results-title">Speeddate Antwerpen <span class= "float"><i class="fas fa-euro-sign"></i> 24<span/></h5>
+
+      <p class="age"><i class="fas fa-user-plus"></i> <strong>24-25 Jaar </strong></p>
+    <div>
+      <p><i class="fas fa-venus"></i> available
+      <i class="fas fa-mars"></i> available
+         <a href="#" class="btn btn-primary">NU BOEKEN</a></p>
+    </div>
+
+  </div>
 </div>
-<div class="center more-results">
-  <h2>Meer evenementen</h2>
+<div class="card">
+  <span class="bg">
+				<div class="date">
+				thu
+				</div>
+				<span  >
+			</span>
+					<div class="date2">
+				11
+				</div>
+				<span >
+			</span>
+				<div class="date3">
+				jun
+				</div>
+			</span>
+  <img src="https://media.istockphoto.com/photos/sweet-couple-having-a-romantic-dinner-picture-id860821478?k=6&m=860821478&s=612x612&w=0&h=Z2FEfxbHNnahwJby14JUIuWcygLlZ2dpdRuELDOkOuw=" class="card-img-top" alt="...">
+  <div class="card-body results-body">
+    <h5 class="card-title results-title">Speeddate Antwerpen <span class= "float"><i class="fas fa-euro-sign"></i> 24<span/></h5>
+
+      <p class="age"><i class="fas fa-user-plus"></i> <strong>24-25 Jaar </strong></p>
+    <div>
+      <p><i class="fas fa-venus"></i> available
+      <i class="fas fa-mars"></i> available
+         <a href="#" class="btn btn-primary">NU BOEKEN</a></p>
+    </div>
+
+  </div>
+</div>
+<div class="card">
+  <span class="bg">
+				<div class="date">
+				thu
+				</div>
+				<span  >
+			</span>
+					<div class="date2">
+				11
+				</div>
+				<span >
+			</span>
+				<div class="date3">
+				jun
+				</div>
+			</span>
+  <img src="https://media.istockphoto.com/photos/sweet-couple-having-a-romantic-dinner-picture-id860821478?k=6&m=860821478&s=612x612&w=0&h=Z2FEfxbHNnahwJby14JUIuWcygLlZ2dpdRuELDOkOuw=" class="card-img-top" alt="...">
+  <div class="card-body results-body">
+    <h5 class="card-title results-title">Speeddate Antwerpen <span class= "float"><i class="fas fa-euro-sign"></i> 24<span/></h5>
+
+      <p class="age"><i class="fas fa-user-plus"></i> <strong>24-25 Jaar </strong></p>
+    <div>
+      <p><i class="fas fa-venus"></i> available
+      <i class="fas fa-mars"></i> available
+         <a href="#" class="btn btn-primary">NU BOEKEN</a></p>
+    </div>
+
+  </div>
+</div>
+<div class="card">
+  <span class="bg">
+				<div class="date">
+				thu
+				</div>
+				<span  >
+			</span>
+					<div class="date2">
+				11
+				</div>
+				<span >
+			</span>
+				<div class="date3">
+				jun
+				</div>
+			</span>
+  <img src="https://media.istockphoto.com/photos/sweet-couple-having-a-romantic-dinner-picture-id860821478?k=6&m=860821478&s=612x612&w=0&h=Z2FEfxbHNnahwJby14JUIuWcygLlZ2dpdRuELDOkOuw=" class="card-img-top" alt="...">
+  <div class="card-body results-body">
+    <h5 class="card-title results-title">Speeddate Antwerpen <span class= "float"><i class="fas fa-euro-sign"></i> 24<span/></h5>
+
+      <p class="age"><i class="fas fa-user-plus"></i> <strong>24-25 Jaar </strong></p>
+    <div>
+      <p><i class="fas fa-venus"></i> available
+      <i class="fas fa-mars"></i> available
+         <a href="#" class="btn btn-primary">NU BOEKEN</a></p>
+    </div>
+
+  </div>
+</div>
+<div class="card">
+  <span class="bg">
+				<div class="date">
+				thu
+				</div>
+				<span  >
+			</span>
+					<div class="date2">
+				11
+				</div>
+				<span >
+			</span>
+				<div class="date3">
+				jun
+				</div>
+			</span>
+  <img src="https://media.istockphoto.com/photos/sweet-couple-having-a-romantic-dinner-picture-id860821478?k=6&m=860821478&s=612x612&w=0&h=Z2FEfxbHNnahwJby14JUIuWcygLlZ2dpdRuELDOkOuw=" class="card-img-top" alt="...">
+  <div class="card-body results-body">
+    <h5 class="card-title results-title">Speeddate Antwerpen <span class= "float"><i class="fas fa-euro-sign"></i> 24<span/></h5>
+
+      <p class="age"><i class="fas fa-user-plus"></i> <strong>24-25 Jaar </strong></p>
+    <div>
+      <p><i class="fas fa-venus"></i> available
+      <i class="fas fa-mars"></i> available
+         <a href="#" class="btn btn-primary">NU BOEKEN</a></p>
+    </div>
+
+  </div>
+</div>
+<div class="card">
+  <span class="bg">
+				<div class="date">
+				thu
+				</div>
+				<span  >
+			</span>
+					<div class="date2">
+				11
+				</div>
+				<span >
+			</span>
+				<div class="date3">
+				jun
+				</div>
+			</span>
+  <img src="https://media.istockphoto.com/photos/sweet-couple-having-a-romantic-dinner-picture-id860821478?k=6&m=860821478&s=612x612&w=0&h=Z2FEfxbHNnahwJby14JUIuWcygLlZ2dpdRuELDOkOuw=" class="card-img-top" alt="...">
+  <div class="card-body results-body">
+    <h5 class="card-title results-title">Speeddate Antwerpen <span class= "float"><i class="fas fa-euro-sign"></i> 24<span/></h5>
+
+      <p class="age"><i class="fas fa-user-plus"></i> <strong>24-25 Jaar </strong></p>
+    <div>
+      <p><i class="fas fa-venus"></i> available
+      <i class="fas fa-mars"></i> available
+         <a href="#" class="btn btn-primary">NU BOEKEN</a></p>
+    </div>
+
+  </div>
+</div>
 </div>
 </section>
 <!-- End results Section -->
@@ -402,12 +400,12 @@
                                 <div class="row">
                                   <div class="col-md-2 col-3 flairm">
                                       <a href="#">
-                                          <img class=" as-seen-img" src="images\nnnnn_08.png" alt="Image" style="max-width:100%;">
+                                          <img class=" as-seen-img-mobile" src="images\nnnnn_08.png" alt="Image" style="max-width:100%;">
                                       </a>
                                   </div>
                                   <div class="col-md-2 col-3 humom">
                                       <a href="#">
-                                          <img class=" as-seen-img" src="images\nnnnn_10.png" alt="Image" style="max-width:100%;">
+                                          <img class=" as-seen-img-mobile" src="images\nnnnn_10.png" alt="Image" style="max-width:100%;">
                                       </a>
                                   </div>
 
@@ -430,7 +428,6 @@
   <div class="center container">
     <h2>THAT'S ALL PRETTY GOOD, BUT WHAT DO THE PEOPLE SAY?</h2>
     <img src="images/semicircular-up-arrow-60x80.png" class="rounded float-right Arrow" alt="Arrow">
-    <div class="line"></div>
   </div>
   <div id="carouselExampleIndicators" class=" container carousel slide" data-ride="carousel">
   <ol class="carousel-indicators">
@@ -634,35 +631,44 @@
     <span class="sr-only">Next</span>
   </a>
 </div>
+<!-- end testimonials Section -->
+<!-- begin newsletter Section -->
+
   <div >
 
 <div class="container">
 
 <div id="wrapper " class="row padding-gift">
-  <div id="subscribe" class="col-12 col-md-6">
+  <div id="subscribe" class="col-12 col-md-7">
 
     <div class="information-column">
     </div>
 
     <div class="form-column">
-                <h2>Schrijf je in voor ons Newsletter</h2>
+                <h2 class="newsletter-title">Schrijf je in voor ons Newsletter</h2>
 
         <p>Word op de hoogte gehouden door ons team</p>
      <form class="form">
         <input type="name" placeholder="Volledige naam">
 
         <input type="email" placeholder="Email adres">
-        <input type="email" placeholder="Email adres">
 
         <p>ingegeven gegevens worden beveiligd door de europese grdp regelgeving</p>
-
+        <div class="form-check">
+            <input type="checkbox" class="checkbox form-check-input" id="exampleCheck1">
+            <label class="form-check-label" for="exampleCheck1">
+Ik ga akkoord met de voorwaarden</label>
+          </div>
        <div class="free-button subscribe-btn">Subscribe</div>
       </form>
 
     </div>
   </div>
+  <!-- end Newsletter Section -->
+  <!-- begin giftcard Section -->
 
-  <div class=" col-12 col-md-6 gift" >
+
+  <div class=" col-12 col-md-5 gift" >
   <div class="row no-gutters background-gift">
     <div class="col-12 col-md-4 card-img">
     </div>
@@ -683,8 +689,22 @@
 
 </div>
 
-</section>
 
+</section>
+<!-- end giftcard Section -->
+<!-- begin footer Section -->
+<footer>
+<div class="image-position">
+
+  <img src="https://c.wallhere.com/photos/47/f0/light_night_city_river_shore-1058590.jpg!d" class="img-fluid footer-image" alt="Responsive image">
+
+
+
+
+</div>
+
+
+</footer>
 
 
 
