--- a/index.html
+++ b/index.html
@@ -73,21 +73,21 @@
   <section id="symbols">
     <div class="card-deck">
   <div class="card" >
-    <img src=".\images\two-hearts2.png" class="card-img-top icons" alt="hearts">
+    <img src=".\images\heart in  heart.png" class="card-img-top icons" alt="hearts">
     <div class="card-body">
       <h5 class="card-title">82% MATCH RATE</h5>
       <p class="card-paragraph">Meer dan 82% van onze deelnemers heeft een match na de speeddating!</p>
     </div>
   </div>
   <div class="card">
-    <img src=".\images\champagne-with-heartb.png" class="card-img-top icons" alt="champagne">
+    <img src=".\images\champagne.png" class="card-img-top icons" alt="champagne">
     <div class="card-body">
       <h5 class="card-title">BUCKETLIST-MATERIAAL</h5>
       <p class="card-paragraph">Speeddaten is populair en hip. Get out of your comfortzone!</p>
     </div>
   </div>
   <div class="card">
-    <img src=".\images\veilig-daten.png" class="card-img-top icons" alt="lock">
+    <img src=".\images\heart lock.png" class="card-img-top icons" alt="lock">
     <div class="card-body">
       <h5 class="card-title">VEILIG EN ANONIEM</h5>
       <p class="card-paragraph">Dare to Date draagt veiligheid en anonimiteit hoog in het vaandel.</p>
@@ -101,7 +101,7 @@
   <div class="container">
     <h1 class="display-4 event-title">Onze evenementen</h1>
     <p class="lead">Bekijk hier het overzicht van onze geplande evenementen & filter eenvoudig op locatie of leeftijd!</p>
-    <img src="images/semicircular-up-arrow-60x80.png" class="rounded float-right Arrow" alt="Arrow">
+    <img src="images/semicircular-up-arrow-60x80.png" class="rounded float-left Arrow" alt="Arrow">
   </div>
 </div>
 
@@ -650,8 +650,13 @@
         <p>Word op de hoogte gehouden door ons team</p>
      <form class="form">
         <input type="name" placeholder="Volledige naam">
-
         <input type="email" placeholder="Email adres">
+        <div class="inputs">
+
+        <input type="number" placeholder="Postcode">
+        <input type="number" placeholder="leeftijd">
+      </div>
+
 
         <p>ingegeven gegevens worden beveiligd door de europese grdp regelgeving</p>
         <div class="form-check">
