--- a/events.html
+++ b/events.html
@@ -7,7 +7,7 @@
 
 <!-- JS, Popper.js, and jQuery -->
 
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
 
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 
@@ -20,7 +20,7 @@
 <!-- Custom Css -->
 
 <link rel="stylesheet" href="assets\css\app.css">
-<link rel="stylesheet" href="https://allyoucan.cloud/cdn/icofont/1.0.1/icofont.css" integrity="sha384-jbCTJB16Q17718YM9U22iJkhuGbS0Gd2LjaWb4YJEZToOPmnKDjySVa323U+W7Fv" crossorigin="anonymous">
+<link rel="stylesheet" href="https://allyoucan.cloud/cdn/icofont/1.0.1/icofont.css" integrity="" crossorigin="anonymous">
 <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@523&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0-2/css/all.min.css">
@@ -30,7 +30,7 @@
 
 <body>
   <!-- ======= Header ======= -->
-<header id="header" class="fixed-top header-events">
+<header id="header" class="fixed-top header-pages">
     <div class="container d-flex align-items-center">
 
     <a href="index.html" class="logo mr-auto"><img src=".\images\Artboard 1 kopie 8.png" alt="logo" class="img-fluid"></a>
@@ -66,7 +66,46 @@
   </div>
 
 </header>
+<section>
 
+<div class="container">
+
+<div class="card">
+  <div class="card-text">
+    <div class="portada">
+
+    </div>
+     <div class="title-total">
+       <div class="title">Speeddate Antwerpen</div>
+       <div class="inline-icons">
+         <div class="icon-span"><i class="far fa-user"></i><span> 22-35 jaar </span></div>
+         <div class="icon-span"><i class="fas fa-calendar-week"></i><span> 3 April </span></div>
+         <div class="icon-span"><i class="fas fa-euro-sign"></i><span> 24,00 </span></div></div>
+       <div class="inline-icons">
+       <div class="icon-span"><i class="fas fa-map-marker-alt"></i><span> Gent </span></div>
+        <div class="icon-span"><i class="far fa-heart"></i><span> good-vibes </span></div>
+       <div class="icon-span"><i class="fas fa-glass-cheers"></i><span> 2 drankjes incl. </span></div></div>
+       <p class="desc">Beleef een geweldige avond en ontmoet leuke en interessante singles in de ongelofelijk gezellige loungebar van het Van der Valk Hotel !</p>
+       <p class="desc">Onze sympathieke host ontvangt jou met een big smile en zorgt ervoor dat je je meteen op je gemak voelt. We beginnen met een gezellige apero om het ijs te breken. Daarna leer je allemaal toppers (net zoals jijzelf) kennen via onze speeddate.</p>
+        <p class="desc">Hierna blijft iedereen altijd lang gezellig napraten met een cocktail of wijntje. Schrijf je snel in en beleef een onvergetelijke avond in Mechelen!</p>
+   <div class="gender">
+     <span> ik ben een
+     <div class="dropdown">
+   <a class="dropdown-toggle btn" data-toggle="dropdown" href="#" >Dropdown trigger</a>
+     <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
+       <li><a>Item One</a></li>
+       <li><a>Item Two</a></li>
+     </ul>
+ </div>
+ </div>
+</div>
+ </div>
+
+   </div>
+
+ </div>
+
+</section>
 
 <script src="assets/js/main.js"></script>
 
