--- a/events.html
+++ b/events.html
@@ -94,7 +94,7 @@
 
      <div class="dropdown dropdown-events">
 
-   <a class="dropdown-toggle btn" data-toggle="dropdown" href="#" > geslacht <span class="caret"></span></a>
+   <a class="dropdown-toggle events-toggle btn" data-toggle="dropdown" href="#" > geslacht <span class="caret"></span></a>
 
      <ul id="genderDropdown" class="dropdown-menu" role="menu" aria-labelledby="GenderLabel">
        <li><a class="gender-value-dropdown">Man</a></li>
