--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 </header><!-- End Header -->
 <section id="hero">
   <div class="hero-container">
-      <h1>Magic happens in real life</h1>
+      <h1 class="image-text-header">Magic happens in real life</h1>
       <h2>Ontmoet interessante singles face to face</h2>
       <div class="button-box">
 
