--- a/events.html
+++ b/events.html
@@ -66,6 +66,13 @@
   </div>
 
 </header>
+<!--begin header foto -->
+<section id="event-image">
+  <div class="hero-container">
+      <h1 class="image-text-header">Events</h1>
+      </div>
+
+</section>
 <!-- begin event card-->
 <section id="event-card">
 
@@ -93,26 +100,102 @@
      <span class="desc"> ik ben een
 
      <div class="dropdown dropdown-events">
-
-   <a class="dropdown-toggle events-toggle btn" data-toggle="dropdown" href="#" > geslacht <span class="caret"></span></a>
-
+   <a class="dropdown-toggle events-toggle1 btn" data-toggle="dropdown" href="#" > geslacht <span class="caret"></span></a>
      <ul id="genderDropdown" class="dropdown-menu" role="menu" aria-labelledby="GenderLabel">
        <li><a class="gender-value-dropdown">Man</a></li>
        <li><a class="gender-value-dropdown">Vrouw</a></li>
       </ul>
-      <div id="kortingInput">
-       <p>kortingscode: <label id="kortinglabel"><input name="kortingscode" type="text" placeholder="kortingscode" size="25" /></label></p>
    </div>
-   </div>
-<p><a href="#" class="btn btn-primary"> BOEKEN</a></p>
-
  </span>
+  </div>
+ <div class="gender">
+   <span class="desc"> ik ben tussen
+
+   <div class="dropdown dropdown-events">
+ <a class="dropdown-toggle events-toggle2 btn" data-toggle="dropdown" href="#" > leeftijd <span class="caret"></span></a>
+   <ul Name="ageValue" id="ageDropdown" class="dropdown-menu" role="menu" aria-labelledby="GenderLabel">
+     <li><a class="age-value-dropdown">18-24</a></li>
+     <li><a class="age-value-dropdown">22-30</a></li>
+     <li><a class="age-value-dropdown">25-35</a></li>
+     <li><a class="age-value-dropdown">28-38</a></li>
+     <li><a class="age-value-dropdown">40-55</a></li>
+     <li><a class="age-value-dropdown">52-65</a></li>
+
+    </ul>
  </div>
+ <p><a href="#" class="btn btn-primary"> BOEKEN</a></p>
+
+</span>
+ </div>
+ <div class="kortingInput">
+    <p>kortingscode: <label id="kortinglabel"><input name="kortingscode" type="text" placeholder="kortingscode" size="25" /></label></p>
+</div>
 </div>
  </div>
    </div>
  </div>
  <!-- end event card-->
+</section>
+<section>
+  <!--begin event details section-->
+  <div class="container py-3">
+  <div class="title h1 text-center">Event details</div>
+  <!-- Card Start -->
+  <div class="card">
+    <div class="row ">
+      <div class="col-md-2">
+      </div>
+
+      <div class="col-md-5 px-3">
+        <div class="card-block px-6">
+          <h4 class="card-title">Horizontal Card with Carousel - Bootstrap 4 </h4>
+          <p class="card-text">
+            The Carousel code can be replaced with an img src, no problem. The added CSS brings shadow to the card and some adjustments to the prev/next buttons and the indicators is rounded now. As in Bootstrap 3
+          </p>
+          <p class="card-text">Made for usage, commonly searched for. Fork, like and use it. Just move the carousel div above the col containing the text for left alignment of images</p>
+          <br>
+        </div>
+      </div>
+      <!-- Carousel start -->
+      <div class="col-md-5">
+        <div id="CarouselTest" class="carousel slide" data-ride="carousel">
+          <ol class="carousel-indicators">
+            <li data-target="#CarouselTest" data-slide-to="0" class="active"></li>
+            <li data-target="#CarouselTest" data-slide-to="1"></li>
+            <li data-target="#CarouselTest" data-slide-to="2"></li>
+
+          </ol>
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img class="d-block" src="https://picsum.photos/450/300?image=1072" alt="">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block" src="https://picsum.photos/450/300?image=855" alt="">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block" src="https://picsum.photos/450/300?image=355" alt="">
+            </div>
+            <a class="carousel-control-prev" href="#CarouselTest" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+            <a class="carousel-control-next" href="#CarouselTest" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+          </div>
+        </div>
+      </div>
+      <!-- End of carousel -->
+    </div>
+  </div>
+  <!-- End of card -->
+
+</div>
+
+
+ <br>
+<br>
 
 
 </section>
