--- a/index.html
+++ b/index.html
@@ -31,14 +31,13 @@
         <li class="active">
           <a href="index.html">HOME</a>
         </li>
-        <li class="nav-link drop-down" data-toggle="dropdown"><a href="">INFO</a>
+        <li class="nav-link drop-down"><a data-toggle="dropdown">INFO</a>
           <ul>
-            <li><a href="#">WAAROM SPEEDDATE?</a></li>
+            <li><a href="waaromSpeeddate.html">WAAROM SPEEDDATE?</a></li>
             <li><a href="#">OVER ONS</a></li>
             <li><a href="#">VEELGESTELDE VRAGEN</a></li>
             <li><a href="#">CAREERS</a></li>
             <li><a href="#">PARTNER WITH US</a></li>
-            <li><a href="#">BLOG</a></li>
           </ul>
         </li>
         <li><a href="events.html">EVENEMENTEN</a></li>
