--- a/waaromSpeeddate.html
+++ b/waaromSpeeddate.html
@@ -71,12 +71,17 @@
       <h2>Speeddating gecombineerd met een hippe en gezellige locatie is hét recept voor een topavond. Schrijf je in en ervaar het zelf!</h2>
       </div>
 </section> <!--end header foto -->
-<section> <!--begin paragraphs -->
-<h3>Waarom speeddate</h3>
-<p>Onze events spreken mensen aan die ervoor open staan om nieuwe mensen te leren kennen in het échte leven. Een leuke groep gecombineerd met een gezellige locatie en wat gratis drankjes zorgt er gegarandeerd voor dat het ijs direct gebroken is en je naar huis gaat met een geweldige avond achter de rug.</p>
-<p>Speeddating is écht bucket-list materiaal, je moet het eens gedaan hebben in je leven! Oké het kan een beetje eng zijn, je weet natuurlijk niet op voorhand wie je gaat ontmoeten of wat je te wachten staat… Maar dit kan er alleen maar voor zorgen dat je aangenaam verrast wordt door de mensen die je ontmoet en de leuke cafés en restaurants die je ontdekt. In het worst case scenario ga je naar huis met een goed verhaal ;)!</p>
-<p>Probeer het eens en wij garanderen je dat je versteld zult staan van hoe leuk de avond was!</p>
-</section>
+<section><!--begin paragraphs -->
+  <div class="container">
+
+<h3>Waarom speeddate?</h3>
+  <p>Onze events spreken mensen aan die ervoor open staan om nieuwe mensen te leren kennen in het échte leven. Een leuke groep gecombineerd met een gezellige locatie en wat gratis drankjes zorgt er gegarandeerd voor dat het ijs direct gebroken is en je naar huis gaat met een geweldige avond achter de rug.</p>
+  <p>Speeddating is écht bucket-list materiaal, je moet het eens gedaan hebben in je leven! Oké het kan een beetje eng zijn, je weet natuurlijk niet op voorhand wie je gaat ontmoeten of wat je te wachten staat… Maar dit kan er alleen maar voor zorgen dat je aangenaam verrast wordt door de mensen die je ontmoet en de leuke cafés en restaurants die je ontdekt. In het worst case scenario ga je naar huis met een goed verhaal ;)!</p>
+  <p>Probeer het eens en wij garanderen je dat je versteld zult staan van hoe leuk de avond was!</p>
+
+  </div>
+
+  </section>
 
 
 
