--- a/events.html
+++ b/events.html
@@ -135,61 +135,257 @@
  </div>
  <!-- end event card-->
 </section>
-<section>
+<section id="event-details">
   <!--begin event details section-->
   <div class="container py-3">
   <div class="title h1 text-center">Event details</div>
   <!-- Card Start -->
   <div class="card">
-    <div class="row ">
+    <ul class="nav nav-tabs" id="myTab" role="tablist">
+  <li class="nav-item">
+    <a class="nav-link active" id="reviews-tab" data-toggle="tab" href="#reviews" role="tab" aria-controls="reviews" aria-selected="true">Reviews</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" id="events-tab" data-toggle="tab" href="#events" role="tab" aria-controls="details" aria-selected="false">Details </a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" id="info-tab" data-toggle="tab" href="#info" role="tab" aria-controls="info" aria-selected="false"> info</a>
+  </li>
+</ul>
+<div class="tab-content" id="myTabContent">
+  <div class="tab-pane fade show active" id="reviews" role="tabpanel" aria-labelledby="home-tab">
+    <div id="carouselExampleIndicators" class="testimonials-events container carousel slide" data-ride="carousel">
+    <ol class="carousel-indicators">
+      <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+    </ol>
+    <div class="carousel-inner height-testimonials">
+      <div class="carousel-item active">
+        <div class="wrapper col-lg-3 col-md-6 col-12">
 
-      <div class="col-md-2">
-    		    <div class="card profile-card-1">
-    		        <img src="https://randomuser.me/api/portraits/women/20.jpg" alt="profile-image" class="profile"/>
-                    <div class="card-content">
-                    <h2>Nathalie<small>Host</small></h2>
-                    </div>
-                </div>
-    		</div>
 
-      <div class="col-md-5 px-3">
-        <div class="card-block px-6">
-          <ul class="list-group list-group-flush">
-            <li class="list-group-item">Start: 19.00</li>
-            <li class="list-group-item">Einde: 23.00</li>
-            <li class="list-group-item"><i class="fa fa-envelope" aria-hidden="true"></i> info@daretodate.eu</li>
-            <li class="list-group-item"><i class="fa fa-phone" aria-hidden="true"></i> 02 400 77 84</li>
-            <li class="list-group-item"><i class="fa fa-map-marker" aria-hidden="true"></i> Bar Zar (Pourbusstraat 100, 2000 Antwerpen)</li>
-          </ul>
-          <br>
+         <div class="profile ">
+           <img src="https://images.unsplash.com/photo-1484186139897-d5fc6b908812?ixlib=rb-0.3.5&s=9358d797b2e1370884aa51b0ab94f706&auto=format&fit=crop&w=200&q=80%20500w" class="thumbnail">
+
+           <h3 class="name">Beverly Little 24</h3>
+           <p class="title">Type event</p>
+           <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque aliquam aliquid porro!</p>
+           <p class="quote">,,</p>
+
+         </div>
+
+
+        </div>
+        <div class="wrapper col-lg-3 col-md-6 col-12">
+
+
+         <div class="profile ">
+           <img src="https://images.unsplash.com/photo-1484186139897-d5fc6b908812?ixlib=rb-0.3.5&s=9358d797b2e1370884aa51b0ab94f706&auto=format&fit=crop&w=200&q=80%20500w" class="thumbnail">
+
+           <h3 class="name">Beverly Little 24</h3>
+           <p class="title">Type event</p>
+           <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque aliquam aliquid porro!</p>
+           <p class="quote">,,</p>
+
+         </div>
+
+
+        </div>
+        <div class="wrapper col-lg-3 col-md-6 col-12">
+
+
+         <div class="profile ">
+           <img src="https://images.unsplash.com/photo-1484186139897-d5fc6b908812?ixlib=rb-0.3.5&s=9358d797b2e1370884aa51b0ab94f706&auto=format&fit=crop&w=200&q=80%20500w" class="thumbnail">
+
+           <h3 class="name">Beverly Little 24</h3>
+           <p class="title">Type event</p>
+           <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque aliquam aliquid porro!</p>
+           <p class="quote">,,</p>
+
+         </div>
+
+
+        </div>
+        <div class="wrapper col-lg-3 col-md-6 col-12">
+
+
+         <div class="profile ">
+           <img src="https://images.unsplash.com/photo-1484186139897-d5fc6b908812?ixlib=rb-0.3.5&s=9358d797b2e1370884aa51b0ab94f706&auto=format&fit=crop&w=200&q=80%20500w" class="thumbnail">
+
+           <h3 class="name">Beverly Little 24</h3>
+           <p class="title">Type event</p>
+           <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque aliquam aliquid porro!</p>
+           <p class="quote">,,</p>
+
+         </div>
+
+
+        </div>
+
+      </div>
+      <div class="carousel-item">
+        <div class="wrapper col-lg-3 col-md-6 col-12">
+
+
+         <div class="profile ">
+           <img src="https://images.unsplash.com/photo-1484186139897-d5fc6b908812?ixlib=rb-0.3.5&s=9358d797b2e1370884aa51b0ab94f706&auto=format&fit=crop&w=200&q=80%20500w" class="thumbnail">
+
+           <h3 class="name">Beverly Little 24</h3>
+           <p class="title">Type event</p>
+           <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque aliquam aliquid porro!</p>
+           <p class="quote">,,</p>
+
+         </div>
+
+
+        </div><div class="wrapper col-lg-3 col-md-6 col-12">
+
+
+         <div class="profile ">
+           <img src="https://images.unsplash.com/photo-1484186139897-d5fc6b908812?ixlib=rb-0.3.5&s=9358d797b2e1370884aa51b0ab94f706&auto=format&fit=crop&w=200&q=80%20500w" class="thumbnail">
+
+           <h3 class="name">Beverly Little 24</h3>
+           <p class="title">Type event</p>
+           <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque aliquam aliquid porro!</p>
+           <p class="quote">,,</p>
+
+         </div>
+
+
+        </div><div class="wrapper col-lg-3 col-md-6 col-12">
+
+
+         <div class="profile ">
+           <img src="https://images.unsplash.com/photo-1484186139897-d5fc6b908812?ixlib=rb-0.3.5&s=9358d797b2e1370884aa51b0ab94f706&auto=format&fit=crop&w=200&q=80%20500w" class="thumbnail">
+
+           <h3 class="name">Beverly Little 24</h3>
+           <p class="title">Type event</p>
+           <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque aliquam aliquid porro!</p>
+           <p class="quote">,,</p>
+
+         </div>
+
+
+        </div>
+        <div class="wrapper col-lg-3 col-md-6 col-12">
+
+
+         <div class="profile ">
+           <img src="https://images.unsplash.com/photo-1484186139897-d5fc6b908812?ixlib=rb-0.3.5&s=9358d797b2e1370884aa51b0ab94f706&auto=format&fit=crop&w=200&q=80%20500w" class="thumbnail">
+
+           <h3 class="name">Beverly Little 24</h3>
+           <p class="title">Type event</p>
+           <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque aliquam aliquid porro!</p>
+           <p class="quote">,,</p>
+
+         </div>
+
+
         </div>
       </div>
-      <!-- Carousel start -->
-      <div class="col-md-5">
-        <div id="CarouselTest" class="carousel slide" data-ride="carousel">
-          <div class="carousel-inner">
-            <div class="carousel-item active">
-              <img class="d-block" src="https://picsum.photos/450/300?image=1072" alt="">
-            </div>
-            <div class="carousel-item">
-              <img class="d-block" src="https://picsum.photos/450/300?image=855" alt="">
-            </div>
-            <div class="carousel-item">
-              <img class="d-block" src="https://picsum.photos/450/300?image=355" alt="">
-            </div>
-            <a class="carousel-control-prev" href="#CarouselTest" role="button" data-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-            <a class="carousel-control-next" href="#CarouselTest" role="button" data-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-  </a>
+      <div class="carousel-item">
+        <div class="wrapper col-lg-3 col-md-6 col-12">
 
-  <h4 class="photos-events-title">Sfeerfoto's</h4>
-          </div>
+
+         <div class="profile ">
+           <img src="https://images.unsplash.com/photo-1484186139897-d5fc6b908812?ixlib=rb-0.3.5&s=9358d797b2e1370884aa51b0ab94f706&auto=format&fit=crop&w=200&q=80%20500w" class="thumbnail">
+
+           <h3 class="name">Beverly Little 24</h3>
+           <p class="title">Type event</p>
+           <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque aliquam aliquid porro!</p>
+           <p class="quote">,,</p>
+
+         </div>
+
+
+        </div>
+        <div class="wrapper col-lg-3 col-md-6 col-12">
+
+
+         <div class="profile ">
+           <img src="https://images.unsplash.com/photo-1484186139897-d5fc6b908812?ixlib=rb-0.3.5&s=9358d797b2e1370884aa51b0ab94f706&auto=format&fit=crop&w=200&q=80%20500w" class="thumbnail">
+
+           <h3 class="name">Beverly Little 24</h3>
+           <p class="title">Type event</p>
+           <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque aliquam aliquid porro!</p>
+           <p class="quote">,,</p>
+
+         </div>
+
+
+        </div>
+        <div class="wrapper col-lg-3 col-md-6 col-12">
+
+
+         <div class="profile ">
+           <img src="https://images.unsplash.com/photo-1484186139897-d5fc6b908812?ixlib=rb-0.3.5&s=9358d797b2e1370884aa51b0ab94f706&auto=format&fit=crop&w=200&q=80%20500w" class="thumbnail">
+
+           <h3 class="name">Beverly Little 24</h3>
+           <p class="title">Type event</p>
+           <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque aliquam aliquid porro!</p>
+           <p class="quote">,,</p>
+
+         </div>
+
+
+        </div>
+        <div class="wrapper col-lg-3 col-md-6 col-12">
+
+
+         <div class="profile ">
+           <img src="https://images.unsplash.com/photo-1484186139897-d5fc6b908812?ixlib=rb-0.3.5&s=9358d797b2e1370884aa51b0ab94f706&auto=format&fit=crop&w=200&q=80%20500w" class="thumbnail">
+
+           <h3 class="name">Beverly Little 24</h3>
+           <p class="title">Type event</p>
+           <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque aliquam aliquid porro!</p>
+           <p class="quote">,,</p>
+
+         </div>
+
+
         </div>
       </div>
+    </div>
+    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div>
+  </div>
+  <div class="tab-pane fade" id="events" role="tabpanel" aria-labelledby="profile-tab">
+    <div class="card-block px-6">
+      <ul class="list-group list-group-flush">
+        <li class="list-group-item">Start: 19.00</li>
+        <li class="list-group-item">Einde: 23.00</li>
+        <li class="list-group-item"><i class="fa fa-envelope" aria-hidden="true"></i> info@daretodate.eu</li>
+        <li class="list-group-item"><i class="fa fa-phone" aria-hidden="true"></i> 02 400 77 84</li>
+        <li class="list-group-item"><i class="fa fa-map-marker" aria-hidden="true"></i> Bar Zar (Pourbusstraat 100, 2000 Antwerpen)</li>
+      </ul>
+    </div>
+  </div>
+  <div class="tab-pane fade" id="info" role="tabpanel" aria-labelledby="contact-tab">
+    <div class="info-padding">
+
+<p>Wat fijn dat je onze online speeddates hebt gevonden! 😃 Je vraagt je misschien af hoe zo’n avond precies in zijn werk gaat?</P>
+
+<p>Ten eerste draait het vooral om nieuwe singles ontmoeten op een toffe manier! 😃 De speeddate verloopt weliswaar online, maar natuurlijk hechten we er veel belang aan dat het nog steeds een face-to-face gebeuren blijft! Je zal voor de online speeddate je video-camera moeten gebruiken en jouw 'dates' effectief in de ogen kijken!😉</p>
+
+<p>Een uur voor de start van de speeddate (19u) krijg je van ons jouw persoonlijke link doorgestuurd om gemakkelijk in te loggen op ons online platform. Hier log je best een kwartiertje op voorhand in zodat je onze match vraagjes kan beantwoorden zodat jou dates volledig top zijn. De match vraagjes zijn een mix tussen persoonlijkheidsvragen en jouw voorkeuren.</p>
+
+<p>Eens ingelogd ben je klaar om te speeddaten en is het gewoon afwachten tot de speeddate om 20u00 stipt van start gaat… Om de 4 minuten krijg je automatisch een andere gesprekspartner te zien via jouw webcam. Altijd spannend om te zien wie de volgende is! 😉 Na elk gesprek kan je de persoon aan de andere kant een like geven. Indien jullie elkaar geliked hebben en de interesse dus wederzijds is, hebben jullie een match!</p>
+
+<p>Het resultaat van jouw speeddate krijg je telkens binnen de 24 uur doorgestuurd. Deze geeft jou dan de gegevens van jouw match(es) mee zodat jullie elkaar terugvinden en gezellig verder kunnen praten om elkaar beter te leren kennen. 🥰 Indien je geen match hebt, no worries, je krijgt nog altijd een mailtje met het aantal personen dat jij hebt aangeduid en het aantal personen die jou hebben aangeduid.</p>
+
+<p>Voilà, zo gaat een online speeddate bij Dare to Date in zijn werk! We hopen jou binnenkort online te mogen verwelkomen voor een gezellige en verrassende avond!😍</p>
+</div>
+
+  </div>
+</div>
       <!-- End of carousel -->
     </div>
   </div>
